--- a/phpNote/基础语法/语法.md
+++ b/phpNote/基础语法/语法.md
@@ -128,4 +128,39 @@ __NAMESPACE__ 命名空间
 2.一个类只能继承一个基类 ？
 3.Joomla！是一个开源 CMS 软件，可以轻松地从 Internet 浏览器创建和管理主页，即使没有 HTML，CSS，FTP 等专业知识基础，也可以使用 CMS 轻松使用浏览器创建主页。
 
+#### 表单
+1.前端元素form，action的值为要提交的页面，为空的时候是提交到本页面，methon的值为get或post
+2.后端可以通过$_GET或者$_POST变量拿到前端输入提交过来的值 $_GET("var")
+3.php后端获取下拉单选的值 $_GET通过select的name属性值拿到option
+4.php后端获取下拉多选的值 前端select设置multiple="multiple"为多选，name="q[]"
+                       后端$_GET("q[]")拿到多选option值数组，通过option的value在数组中取值
+5.php后端获取单选框的值 前端input的type="radio"，name一致，value不同，通过name拿
+6.php后端获取复选框的值 type="checkBox"，name="q[]"
+
+##### 表单验证
+前端验证
+    1.利用元素属性，判断是否为空及电话和邮箱格式，如果不合格则不允许提交
+后端验证
+    1.是否为空 empty()
+    2.正则匹配，判断格式 preg_match('preg',var)
+安全
+    $_SERVER["PHP_SELF"]是超级全局变量，返回当前正在执行脚本的文件名
+    htmlspecialchars() 函数把一些预定义的字符转换为 HTML 实体。
+
+    $_SERVER["PHP_SELF"] 变量有可能会被黑客使用！当黑客使用跨网站脚本的HTTP链接来攻击时，$_SERVER["PHP_SELF"]服务器变量也会被植入脚本。原因就是跨网站脚本是附在执行文件的路径后面的，因此$_SERVER["PHP_SELF"]的字符串就会包含HTTP链接后面的JavaScript程序代码。
+
+xss：XSS又叫 CSS (Cross-Site Script) ,跨站脚本攻击。恶意攻击者往Web页面里插入恶意html代码，当用户浏览该页之时，嵌入其中Web里面的html代码会被执行，从而达到恶意用户的特殊目的。
+
+表单验证（防止$_SERVER["PHP_SELF"]被利用）
+    function test_input($data)
+    {
+        $data = trim($data); //先去空格
+        $data = stripslashes($data); //再去用户输入的反斜杠
+        $data = htmlspecialchars($data); //最后转义
+        return $data;
+    }
+
+### PHP高级教程
+
+#### 多维数组 
 
