--- a/phpNote/基础语法/语法.md
+++ b/phpNote/基础语法/语法.md
@@ -162,5 +162,170 @@ xss：XSS又叫 CSS (Cross-Site Script) ,跨站脚本攻击。恶意攻击者往
 
 ### PHP高级教程
 
-#### 多维数组 
+#### 多维数组
+一个数组中的值可以是另一个数组，另一个数组的值也可以是一个数组
 
+#### 日期 date()函数
+可以将时间戳格式化为可读性更好的时间格式
+string date ( string $format [, int $timestamp ] ) 
+    $format 规定以何种格式来格式化 "Y/M/D",年月日之间可以加各种字符
+    $timestamp 指定要转化的时间戳 默认为当前时间
+
+#### 包含文件（即插入文件，引入header这种）
+1.include 生成一个警告（E_WARNING），在错误发生后脚本会继续执行。
+2.require 生成一个致命错误（E_COMPILE_ERROR），在错误发生后脚本会停止执行。
+
+格式：<?php include/require 'header.php'; ?>
+
+#### php文件处理
+1.fopen('filename','method') 打开文件
+2.fclose('filename','method') 关闭文件
+2.feof(file) 检测文件末尾（是否读写完）
+4.fgets() 逐行读取
+5.fgetc() 逐字符读取
+
+#### 文件上传
+前端：
+    <form action="upload_file.php" method="post" enctype="multipart/form-data">
+        <label for="file">文件名：</label>
+        <input type="file" name="file" id="file"><br>
+        <input type="submit" name="submit" value="提交">
+    </form>
+    注意：enctype属性规定提交表单的内容格式，二进制时（比如文件）需要设置为multipart/form-data
+        type="file" 属性规定了应该把输入作为文件来处理
+后端：
+    获取上传的文件信息
+    $_FILES
+        $_FILES["file"]["name"] - 上传文件的名称
+        $_FILES["file"]["type"] - 上传文件的类型
+        $_FILES["file"]["size"] - 上传文件的大小，以字节计
+        $_FILES["file"]["tmp_name"] - 存储在服务器的文件的临时副本的名称
+        $_FILES["file"]["error"] - 由文件上传导致的错误代码
+    限制上传的内容
+
+    保存文件
+        move_uploaded_file($_FILES["file"]["tmp_name"], "upload/" . $_FILES["file"]["name"]);
+
+#### cookie 常用于识别用户
+1.cookie 是一种服务器留在用户计算机上的小文件（存在客户端）。每当同一台计算机通过浏览器请求页面时，这台计算机将会发送 cookie。
+2.设置cookie setcookie(name, value, expire, path, domain) 必须放在html之前
+    expire 到期时间
+        $expire=time()+3600
+        $expire=time()+60*60*24*30;
+3.拿到cookie
+    $_COOKIE['name']
+4.删除cookie
+    使过期日期变更为过去的时间点 setcookie("user", "", time()-3600)
+
+#### session
+1.介绍
+    存储关于用户会话（session）的信息，或者更改用户会话（session）的设置。Session 变量存储单一用户的信息，并且对于应用程序中的所有页面都是可用的。存在服务端。
+2.机制
+    为每个访客创建一个唯一的 id (UID)，并基于这个 UID 来存储变量。UID 存储在 cookie 中，或者通过 URL 进行传导。
+3.开启session
+    在创建使用之前必须先开启，session_start()
+4.存储、取回session
+     $_SESSION['name']
+5.销毁session
+    unset($_SESSION['name']) 释放一个session
+    session_destory 销毁所有session
+
+#### email
+1.从脚本发送邮件 
+    <?php
+    $to = "someone@example.com";         // 邮件接收者
+    $subject = "参数邮件";                // 邮件标题
+    $message = "Hello! 这是邮件的内容。";  // 邮件正文
+    $from = "someonelse@example.com";   // 邮件发送者
+    $headers = "From:" . $from;         // 头部信息设置
+    mail($to,$subject,$message,$headers);
+    echo "邮件已发送";
+    ?>
+2.email安全，防止e-mail注入
+    使用过滤器（见下面）：
+        FILTER_SANITIZE_EMAIL 过滤器从字符串中删除电子邮件的非法字符
+        FILTER_VALIDATE_EMAIL 过滤器验证电子邮件地址的值
+
+#### 过滤器
+1.作用：验证和过滤来自非安全来源的数据（外部数据）
+    来自表单的输入数据
+    Cookies
+    Web services data
+    服务器变量
+    数据库查询结果
+2.过滤器函数：
+    filter_var(var,过滤器,选项) - 通过一个指定的过滤器来过滤单一的变量
+    filter_var_array() - 通过相同的或不同的过滤器来过滤多个变量
+    filter_input() - 获取一个输入变量，并对它进行过滤
+    filter_input_array() - 获取多个输入变量，并通过相同的或不同的过滤器对它们进行过滤
+3.过滤器：
+    1.系统：
+        FILTER_VALIDATE_INT
+    2.自定义
+        使用 Filter Callback
+4.选项：
+    用于向指定的过滤器添加额外的过滤选项
+    一般是一个关联数组
+
+#### JSON
+1.json编码
+    json_encode(对象/数组) 返回json数据格式
+2.json解码
+    json_encode(json,true/false) ture时返回数组，false返回对象
+
+#### 错误处理 返回错误位置及提示
+1.die('错误提示') 发生错误终止脚步，并返回提示
+2.创建自定义错误处理器
+    error_function(error_level,error_message,error_file,error_line,error_context)
+        error_level	必需。为用户定义的错误规定错误报告级别。必须是一个数字。参见下面的表格：错误报告级别。
+        error_message 必需。为用户定义的错误规定错误消息。
+        error_file	可选。规定错误发生的文件名。
+        error_line	可选。规定错误发生的行号。
+        error_context	可选。规定一个数组，包含了当错误发生时在用的每个变量以及它们的值。
+    将自定义的错误处理器设置为默认错误处理器：
+        set_error_handler('error_function')
+3.触发错误：
+    trigger_error()
+#### 异常处理 在指定的错误发生时改变脚本的正常流程
+1.异常的基本使用
+    try 使用异常的函数应该位于 "try" 代码块内。如果没有触发异常，则代码将照常继续执行。但是如果异常被触发，会抛出一个异常
+    throw 里规定如何触发异常。每一个 "throw" 必须对应至少一个 "catch"
+    catch "catch" 代码块会捕获异常，并创建一个包含异常信息的对象
+
+    <?php
+    // 创建一个有异常处理的函数
+    function checkNum($number)
+    {
+        if($number>1)
+        {
+            throw new Exception("变量值必须小于等于 1");
+        }
+            return true;
+    }
+        
+    // 在 try 块 触发异常
+    try
+    {
+        checkNum(2);
+        // 如果抛出异常，以下文本不会输出
+        echo '如果输出该内容，说明 $number 变量';
+    }
+    // 捕获异常
+    catch(Exception $e)
+    {
+        echo 'Message: ' .$e->getMessage();
+    }
+    ?>
+2.创建自定义的异常处理器
+    创建自定义的异常处理程序非常简单。我们简单地创建了一个专门的类，当 PHP 中发生异常时，可调用其函数。该类必须是 exception 类的一个扩展。
+
+    class customException extends Exception
+    {
+        public function errorMessage()
+        {
+            // 错误信息
+            $errorMsg = '错误行号 '.$this->getLine().' in '.$this->getFile()
+            .': <b>'.$this->getMessage().'</b> 不是一个合法的 E-Mail 地址';
+            return $errorMsg;
+        }
+    }
