--- a/phpNote/基础语法/语法.md
+++ b/phpNote/基础语法/语法.md
@@ -329,3 +329,62 @@ string date ( string $format [, int $timestamp ] )
             return $errorMsg;
         }
     }
+
+### 数据库
+
+#### mysql
+1.简介
+    网站常用数据库，和php配合较好，关系型数据库
+2.连接
+    三种方式：mysqli只针对mysql，有相应的API；PDO可以连接多种数据库，能够切换(常用PDO)
+    mysqli(面向对象) 
+        <?php
+        $servername = "localhost";
+        $username = "username";
+        $password = "password";
+        
+        // 创建连接
+        $conn = new mysqli($servername, $username, $password);
+        
+        // 检测连接
+        if ($conn->connect_error) {
+            die("连接失败: " . $conn->connect_error);
+        } 
+        echo "连接成功";
+        ?>
+    mysqli(面向过程)
+        if (!$conn) {
+            die("连接失败: " . mysqli_connect_error);
+        } 
+    PDO
+        try {
+            $conn = new PDO("mysql:host=$servername;", $username, $password);
+            echo "连接成功"; 
+        }
+        catch(PDOException $e)
+        {
+            echo $e->getMessage();
+        }
+3.其他方法
+    使用数据库命令一般 $conn->query($sql)/mysqli_query($sql)/$conn->exec($sql)
+    特殊：
+        插入多条语句，$sql通过 . 连接  $conn->multi_query()/mysqli_multi_query()/使用事务（批量处理sql语句，先预处理，如果批量语句无错，则提交；如果有一条错，则回滚，此次事务查询失败）
+        $conn->beginTransaction();
+        // SQL 语句
+        $conn->exec("INSERT INTO MyGuests (firstname, lastname, email) 
+        VALUES ('John', 'Doe', 'john@example.com')");
+        $conn->exec("INSERT INTO MyGuests (firstname, lastname, email) 
+        VALUES ('Mary', 'Moe', 'mary@example.com')");
+        $conn->exec("INSERT INTO MyGuests (firstname, lastname, email) 
+        VALUES ('Julie', 'Dooley', 'julie@example.com')");
+    
+        // 提交事务
+        $conn->commit();
+4.预处理
+    PDO：
+        $stmt = $conn->prepare("INSERT INTO MyGuests (firstname, lastname, email) 
+        VALUES (:firstname, :lastname, :email)");
+        $stmt->bindParam(':firstname', $firstname);
+        $stmt->bindParam(':lastname', $lastname);
+        $stmt->bindParam(':email', $email);
+5.ODBC 
