--- a/phpNote/基础语法/语法.md
+++ b/phpNote/基础语法/语法.md
@@ -387,4 +387,32 @@ string date ( string $format [, int $timestamp ] )
         $stmt->bindParam(':firstname', $firstname);
         $stmt->bindParam(':lastname', $lastname);
         $stmt->bindParam(':email', $email);
-5.ODBC 
+5.ODBC
+
+#### AJAX Asynchronous JavaScript and XML.
+1.无需重新加载整个网页的情况下，能够更新部分网页的技术
+2.格式
+    前端
+        if (window.XMLHttpRequest)
+        {
+            // IE7+, Firefox, Chrome, Opera, Safari 浏览器执行的代码
+            xmlhttp=new XMLHttpRequest();
+        }
+        else
+        {    
+            //IE6, IE5 浏览器执行的代码
+            xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+        }
+        xmlhttp.onreadystatechange=function()
+        {
+            if (xmlhttp.readyState==4 && xmlhttp.status==200)
+            {
+                document.getElementById("txtHint").innerHTML=xmlhttp.responseText;
+            }
+        }
+        xmlhttp.open("GET","gethint.php?q="+str,true);
+        xmlhttp.send();
+    后端
+        $response=$hint;
+        echo $response; //通过这条语句将结果返回给前端？
+3.其他例子略
