--- a/phpNote/基础语法/面向对象.md
+++ b/phpNote/基础语法/面向对象.md
@@ -17,19 +17,39 @@
     __set 对属性赋值、取值时，即使属性不存在，也不会报错
     __get 对属性赋值、取值时，即使属性不存在，也不会报错 
     __call 防止调用不存在的方法而报错
-    __callStatic
-    __toString
+    __callStatic 防止调用不存在的方法而报错
+    __toString 防止echo对象时报错，而且打印对象时可以定制化输出
 
     重载：
         java：一个类中可以定义参数列表不同但名字相同的多个方法
-        php：动态创建类属性和方法：__get() __set()
-3.继承和多态
+        php：动态创建（增加）类属性和方法：__get() __set()
+3.继承和多态 类的复用
+    继承是类级别的复用，多态是方法级别的复用
+
+    继承和组合
+        组合 偏重整体和局部的关系 ‘需要’的关系 一个类中使用另一个类的实例来处理问题
+        继承 偏重父与子的关系 ‘是’‘像’的关系
+
+        组合需要一一创建局部对象，增加代码，但耦合度低
+        继承代码少，但耦合度高，不易扩展
+    ::运算符（范围解析操作符） 1.调用父类的方法 2.调用类常量和静态方法
+
+    多态：同一类型的对象收到相同消息时，会得到不同的结果。这个消息是不可预测的。即“同一类型，不同结果”
+        真正意义：实际开发中，只要关心一个接口或基类的编程，而不必关心一个对象所属与的具体类。
+        php自身即为多态
+
 4.面向接口编程
+    定义一套规范，描述一个“物”，实现接口的所有类，如果实现了接口的全部基本功能，则合格。是抽象的。
+    interface
+    接口本身什么都不做，但是可以告诉我们它可以做什么。
 5.反射
-6.异常和错误处理
+    在php运行状态中，扩展分析php程序，导出或提取出关于类、方法、属性、参数等的详细信息，包括注释。这种动态获取信息以及动态调用对象方法的功能陈伟反射API。
+
+    可以用于文档生成：对文件里的类进行扫描，逐个生成扫描文档。
+6.异常和错误处理 略
 7.关键字
     private：权限修饰符，可以修饰成员变量和成员方法，被其修饰只能在本类中被访问,提供get和set方法以供外界访问
-    static:被static所修饰的成员变量，是一个共享变量，被类的所有对象所共享
+    static:被static所修饰的成员变量，是一个共享变量（全局变量），被类的所有对象所共享
         static关键字的特点
             随着类的加载而加载
             可以通过类名调用
@@ -39,7 +59,19 @@
             静态方法中不能使用this关键字，this表示本类的引用，即一个对象，而静态是虽类的加载而加载的，静态比对象先存在
             静态方法只能访问静态成员变量和静态成员方法（静态只能访问静态）
     super：
+        1.如子类和父类有相同的成员变量和方法，则父类的成员将会被覆盖，引用父类的成员可以用super
+        2.子类可以通过super关键字调用父类中定义的构造方法
     final：
-    abstract：
+        使用final声明的类不能被继承；
+        使用final声明的方法不能被子类覆盖；
+        使用final声明的变量不能被修改，即为常量
+
+        final修饰字段的时候 一般和static一起使用，来定义一些不可变的静态常量
+    abstract：用来约束子类
+    protected：同类，子类中可以继承，调用
+
+### 面向对象设计的五大原则
+
+
 
 
